--- a/.gitconfig
+++ b/.gitconfig
@@ -1,12 +1,14 @@
 [alias]
 	# View the SHA, description, and history graph of the latest 20 commits
 	l = log --pretty=oneline -n 20 --graph
+    lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 	# View the current working tree status using the short format
-	s = status -s
+	st = status -s
 	# Show the diff between the latest commit and the current state
 	d = !"git diff-index --quiet HEAD -- || clear; git diff --patch-with-stat"
 	# `git di $number` shows the diff between the state `$number` revisions ago and the current state
 	di = !"d() { git diff --patch-with-stat HEAD~$1; }; git diff-index --quiet HEAD -- || clear; d"
+    df = diff --color --color-words
 	# Pull in remote changes for the current repository and all its submodules
 	p = !"git pull; git submodule foreach git pull origin master"
 	# Clone a repository including all submodules
@@ -15,8 +17,10 @@
 	ca = !git add -A && git commit -av
 	# Switch to a branch, creating it if necessary
 	go = checkout -B
+    co = checkout
 	# Show verbose output about tags, branches or remotes
 	tags = tag -l
+    br = branch
 	branches = branch -a
 	remotes = remote -v
 	# Credit an author on the latest commit
@@ -40,6 +44,7 @@
 [color]
 	# Use colors in Git commands that are capable of colored output when outputting to the terminal
 	ui = auto
+    interactive = true
 [color "branch"]
 	current = yellow reverse
 	local = yellow
